--- a/app/views/news.html.erb
+++ b/app/views/news.html.erb
@@ -1,4 +1,5 @@
-<%= form_tag ({controller: 'sessions', action: 'create', method: 'post'}) do %>
-  <input name=name>
-  <input type=submit value='login'>
+<%= form_tag '/sessions/create' %>
+<%= label_tag :name %>
+<%= text_field_tag :name %>
+<%= button_tag "Login" %>
 <% end %>
